# HR-Analytics

./: .dockerignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  skills-lock.json
.agents/: plugin.json
.github/workflows/: mlops.yml
dags/: hr_attrition_pipeline.py
models/: best_params.json  xgb_attrition.json
notebooks/: attrition_modeling.ipynb
outputs/: risk_scores.csv  risk_summary.csv
powerbi/: PowerBI_Architecture_and_DAX.md
src/: api.py  train_attrition_model.py
